<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Descriptions & Hints -->
    <string name="camera_button">Take a photo of the item to stock</string>
    <string name="camera_button_hint">Take a photo of the item to stock</string>


    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Stock2Go</string>

    <!-- Empty_View -->
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">The database is still empty&#8230;</string>
    <!-- Subtitle text for the empty view that prompts the user to add a stock item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a stock item</string>

    <!-- CatalogAction menu Dummy data & Delete all stock2go-->
    <!-- Label for overflow menu option that inserts fake stock item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all stock item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Stock items</string>

    <!-- Log messages for testing purposes in dev. mode-->
    <string name="log_prepared_options_menu">onPrepareOptionsMenu setting delete button visibility false</string>
    <string name="log_unsaved_changes_dialog">Warning unsaved changes will be discarded</string>
    <string name="error_inserting_new_row">Failed to insert row for: <xliff:g exemple="4" id="Stock item_in_table_of_contents"> </xliff:g> </string>


    <!-- Error deleting Table from database-->
    <string name="error_deleting_all_entries">Error deleting rows in Stock Table: <xliff:g exemple="4" id="Stock item_in_table_of_contents"> </xliff:g> </string>
    <!-- Toast message confirming # stock item rowsDeleted [CHAR LIMIT=20] -->
    <!--<string name="confirmation_deletion_all_entries">rows in Stock Table deleted </string>-->
    <string name="confirmation_deletion_all_entries">Rows in Stock Table deleted: <xliff:g exemple="4" id="Stock item_in_table_of_contents"> </xliff:g> </string>

    <!-- EditorActivity strings in case of leaving activity -->
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current stock item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Strings for the Order menu & intents to phone call & e-mail -->
    <string name="action_order_confirmation">Please proceed to phone or e-mail to place your order</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="recurring_order_title">Recurring order for: </string>
    <string name="recurring_order_title_brand">Brand:</string>
    <string name="recurring_order_txt_body">Dear Sirs, \n\n\nPlease send us a soon as possible more</string>
    <string name="recurring_order_txt_brand">of the brand:</string>


    <!--Toast for Editor insert data-->
    <string name="toast_error_editor_empty_fields">Please fill all fields with stock item info</string>
    <string name="toast_error_editor_inserting_stock_item_data">Error while inserting stock item info</string>
    <string name="toast_success_editor_inserting_stock_item_data">Stock item info successfully inserted</string>

    <!--Toast for Editor updating data-->
    <string name="toast_error_editor_updating_stock_item_data">Error while updating stock item info</string>
    <string name="toast_success_editor_updating_stock_item_data">Stock item info successfully updated</string>

    <!--Toast for dummy data-->
    <string name="toast_error_inserting_dummy_stock_item_data">Error while inserting dummy stock item info</string>
    <string name="toast_success_inserting_dummy_stock_item_data">Dummy stock item info successfully inserted</string>

    <string name="toast_error_adding_item_to_cart">Error, product was not added to the cart</string>
    <string name="toast_success_adding_item_to_cart">Product added to the cart</string>

    <!-- Warning empty edit fields -->
    <string name="toast_insert_stock_item_name">Please insert a stock item name</string>
    <string name="toast_insert_stock_item_brand">Please insert a stock item brand</string>
    <string name="toast_insert_stock_item_stock_qty">Please up the stock item quantity</string>
    <string name="toast_insert_stock_item_name_supplier">Please insert the name of the stock item supplier</string>
    <string name="toast_insert_stock_item_supplier_phone">Please insert the phone number of the supplier</string>
    <string name="toast_insert_stock_item_supplier_email">Please insert the e-mail address of the supplier</string>
    <string name="toast_insert_stock_item_valid_section_required">Please select a valid section</string>
    <string name="toast_insert_stock_item_price_required">Please insert the stock item price</string>
    <string name="toast_image_required">Please take or select a stock item image</string>

    <!-- Title for the activity to add a new stock item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_stock_item">Add a stock item</string>

    <!-- Title for the activity to add a new stock item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_existing_stock_item">Edit stock item</string>

    <!-- Label for editor menu option to save stock item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current stock item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <string name="action_order">Order</string>


    <!-- Delete Dialog in EditorActivity -->
    <!-- Toast message in editor when current stock item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_stock_item_successful">Stock item deleted</string>

    <!-- Toast message in editor when current stock item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_stock_item_failed">Error with deleting stock item</string>

    <!-- Dialog message to ask the user to confirm deleting the current stock item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this stock item?</string>

    <!-- Dialog button text for the option to confirm deleting the current stock item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current stock item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>


    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for section information in the editor [CHAR LIMIT=30] -->
    <string name="category_section">Section</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="description_price">price</string>
    <string name="price">Price in €<xliff:g exemple="4" id="Stock item_in_table_of_contents"> </xliff:g> </string>


    <string name="description_empty_db_image">Database still empty, please populate it with data</string>


    <string name="product">Product:</string>
    <string name="currency">Price in €</string>


    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_stock_item_name">Name</string>

    <!-- Text hint for brand field in the editor [CHAR LIMIT=30] -->
    <string name="hint_stock_item_brand">Brand</string>

    <!-- Text hint for Quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_stock_item_quantity"># in stock</string>

    <string name="in_stock"># in stock</string>

    <!-- Text hint for Supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_stock_item_supplier">Name of Supplier</string>

    <!-- Text hint for Supplier phone number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_stock_item_supplier_phone">Phone number of Supplier</string>

    <!-- Text hint for Supplier e-mail field in the editor [CHAR LIMIT=30] -->
    <string name="hint_stock_item_supplier_email">e-mail address of Supplier</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_stock_item_price">Price per Item</string>

    <!-- Pricing as sold by Units or by kilograms [CHAR LIMIT=5] -->
    <!--<string name="unit_stock_item_price">p/kg</string>-->
    <string name="unit_stock_item_units">p/Item</string>

    <!-- Label for dropdown menu option if the stock item section is unknown [CHAR LIMIT=20] -->
    <!-- Possible values for the section of the stock2go (unknown, bread, cleaning materials,
    cosmetics, dairy products, dressings and sauces, electrical, frozen food, fruit, kitchen utensils, vegetables -->
    <string name="section_unknown">Unknown</string>
    <string name="section_bread">Bread</string>
    <string name="section_cleaning">Cleaning</string>
    <string name="section_cosmetics">Cosmetics</string>
    <string name="section_dairy">Dairy</string>
    <string name="section_dressings_sauces">Dressings and Sauces</string>
    <string name="section_electrical">Electrical</string>
    <string name="section_frozen">Frozen</string>
    <string name="section_fruit">Fruit</string>
    <string name="section_kitchen_utensils">Kitchen_utensils</string>
    <string name="section_vegetables">Vegetables</string>

    <!-- Label for the stock item brand if the brand is unknown [CHAR LIMIT=20] -->
    <string name="unknown_brand">Unknown brand</string>
</resources>
